fix(iam): make EntitlementCeiling's canonical CSV actually sorted (TASK-BE-494) (#2375)
Restores main GREEN on 'Build & Test (JDK 21, Linux)'.

Set.copyOf discarded the TreeSet ordering (ImmutableCollections iterates by element hash x a per-JVM random salt), so domainsCsv() encoded the same ceiling as 'erp,wms' or 'wms,erp' depending on the JVM. Fix keeps the sorted order in the field via unmodifiableSet(LinkedHashSet(TreeSet)). Two regression tests pin canonical order (6 domains -> 1-in-720 accidental pass) and intersect canonicality; both fail (3 tests) if the old line is restored.

Merged with one pre-existing, unrelated red check: Integration (inventory + inbound-service) / PutawayLifecycleIntegrationTest — a high-rate main flake (45s Kafka awaitility) present before these changes and independent of them. User-approved.